refactor(src/): Change all files to typescript
Changed files to be typescript as well as get basic types in place

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,6 @@
         </div>
       </div>
       
-      <script src="./init.js"></script>
+      <script src='init.ts'></script>
     </body>
 </html>
